syntax = "proto3";

package collector.v1;

service CollectorService {
  rpc GetConfig (GetConfigRequest) returns (GetConfigResponse);
  rpc RegisterCollector(RegisterCollectorRequest) returns (RegisterCollectorResponse);
}

message GetConfigRequest {
  string id = 1;
  map<string, string> attributes = 2;
  map<string, string> local_attributes = 4;
  string hash = 3;
}

message GetConfigResponse {
  string content = 1;
  string hash = 2;
  bool not_modified = 3;
}

message RegisterCollectorRequest {
  string id = 1;
  map<string, string> attributes = 2;
  map<string, string> local_attributes = 4;
  string name = 3;
}

message RegisterCollectorResponse {
}
